# claude-dispatch

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
claude_dispatch/: __init__.py  agent.py  app.tcss  cli.py  config.py  cost_guard.py  db.py  dispatcher.py  dispatcher_context.py  hooks.py  jarvis.py  job.py  mock.py  plan.py  prompts.py  worker.py
claude_dispatch/ui/modals/: actions.py  cost.py  help.py  prompt.py  resume.py
claude_dispatch/ui/screens/: agents.py  config.py  conversation.py  logs.py  main.py  stats.py
claude_dispatch/ui/views/: agents.py  jobs.py  logs.py
claude_dispatch/ui/widgets/: chat_input.py  dispatch_header.py
docs/: config-reference.md
examples/: config.yaml
examples/hooks/: README.md  post_job_complete.example  post_session_end.example
tests/: test_agent.py  test_agents_message.py  test_config.py  test_conversation.py  test_cost_guard.py  test_db.py  test_dispatcher_agent.py  test_hooks.py  test_jarvis_context.py  test_job_db.py  test_kill.py  test_logs_screen.py  test_mcp_config.py  test_plan_phase.py  test_plan_validation.py  test_scheduler.py  test_send_message.py  test_tui.py  test_tui_lifecycle.py  test_ux_fixes.py  test_worker.py
