[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-dispatch"
version = "0.1.0"
description = "k9s-like TUI for orchestrating parallel Claude Code sessions"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "textual>=0.60.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "claude-code-sdk>=0.0.25",
    "aiosqlite>=0.19.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4.0",
    "mypy>=1.10",
]

[project.scripts]
claude-dispatch = "claude_dispatch.cli:main"

[project.urls]
Homepage = "https://github.com/manki23/claude-dispatch"
Issues = "https://github.com/manki23/claude-dispatch/issues"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
